trunk/Archive2/de/32060aebe56897/main.cpp
class A
{
public:
  A(){}
  A(const A&) = delete;
};

class B
{
  A a;
};

int main()
{
  B b;
  B c = b;  
}